añadida clase generalContent

--- a/CambiaColor.html
+++ b/CambiaColor.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="generalContent">
         <div id="memeVioleta">
             <!-- meme violeta -->
         </div>
