--- a/scrollProject/index.html
+++ b/scrollProject/index.html
@@ -20,16 +20,16 @@
                     <div class="links">
                         <ul class="links-container">
                             <li>
-                                <a href="#home">home</a>
+                                <a href="#home" class="scroll-link">home</a>
                             </li>
                             <li>
-                                <a href="#about">about</a>
+                                <a href="#about" class="scroll-link">about</a>
                             </li>
                             <li>
-                                <a href="#services">services</a>
+                                <a href="#services" class="scroll-link">services</a>
                             </li>
                             <li>
-                                <a href="#tours">tours</a>
+                                <a href="#tours" class="scroll-link">tours</a>
                             </li>
                         </ul>
                     </div>
